Add section for atheltics page content
including card for 'Upcoming Games' feed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ layout: default
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<!-- Portfolio Grid -->
+<!-- Portfolio Grid From template
+===================================
 <section class="bg-light" id="portfolio">
   <div class="container">
     <div class="row">
@@ -108,4 +109,20 @@ layout: default
       </div>
     </div>
   </div>
+</section>  -->
+
+<section class="container content-marg">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header text-center text-white"><h2>Upcoming Games</h2></div>
+          <div class="card-body scroll-table">
+            <table id="results" class="table table-responsive text-centered"></table>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+
+      </div>
+    </div>
 </section>
