Replace second thumbnail image with basketball-thumb

--- a/sports.html
+++ b/sports.html
@@ -18,7 +18,7 @@ layout: sports
           </div>
           <div class="sports-hover">
           </div>
-          <img class="img-fluid" src="../assets/img/baseball-thumb.jpg" alt="">
+          <img class="img-fluid" src="../assets/img/baseball-thumb.jpg" alt="2017 NJCAA Division 2 National Champions photo, link to baseball page">
         </a>
         <div class="sports-caption">
           <p class="text-muted">
@@ -30,12 +30,12 @@ layout: sports
       </div>
       <div class="col-md-4 col-sm-6 sports-item">
         <a class="sports-link" data-toggle="modal" href="#sportsModal2">
-          <div class="sports-hover">
-            <div class="sports-hover-content">
-              Insert appropriate hover text here.
-            </div>
+          <div class="sports-hover-content">
+            Basketball
           </div>
-          <img class="img-fluid" src="assets/img/02-thumbnail.jpg" alt="">
+          <div class="sports-hover">
+          </div>
+          <img class="img-fluid" src="../assets/img/basketball-thumb.jpg" alt="">
         </a>
         <div class="sports-caption">
           <h4>Explore</h4>
