--- a/sports.html
+++ b/sports.html
@@ -6,12 +6,6 @@ baseurl: ../
 <section class="sports-section" id="sports">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase editable">Sports</h2>
-        <h3 class="section-subheading text-muted editable">Lorem ipsum dolor sit amet consectetur.</h3>
-      </div>
-    </div>
-    <div class="row">
       <div class="col-md-4 col-sm-6 sports-item">
         <a class="sports-link" href="http://athletics.kcc.edu/baseball">
           <div class="thumb-caption">
@@ -19,91 +13,117 @@ baseurl: ../
           </div>
           <div class="sports-hover">
           </div>
-          <img class="img-fluid" src="{{page.baseurl}}assets/img/baseball-thumb.jpg" alt="2017 NJCAA Division 2 National Champions photo, link to baseball page">
+          <img class="img-fluid" src="{{page.baseurl}}assets/img/baseball-thumb.jpg" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page">
         </a>
         <div class="sports-caption">
-          <p class="text-muted">
+          <p>
             <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">News</a></span>
           </p>
+          <div class="sports-blurb editable">
+            <p class="editable">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" href="">
+        <a class="sports-link" href="http://athletics.kcc.edu/mbasketball">
           <div class="thumb-caption">
             Men's Basketball
           </div>
           <div class="sports-hover">
           </div>
-          <img class="img-fluid" src="{{page.baseurl}}assets/img/basketball-thumb.jpg" alt="Photo of Dante Emerson #23 of the KCC men's basketball team, link to men's basketball page">
+          <img class="img-fluid" src="{{page.baseurl}}assets/img/basketball-thumb.jpg" alt="Photo of Dante Emerson #23 of the KCC Cavaliers Men's Basketball team, link to men's basketball page">
         </a>
         <div class="sports-caption">
-          <p class="text-muted">
+          <p>
             <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">News</a></span>
           </p>
+          <div class="sports-blurb editable">
+            <p class="editable">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" data-toggle="modal" href="#sportsModal3">
-          <div class="sports-hover">
-            <div class="sports-hover-content">
-              <i class="fa fa-plus fa-3x"></i><br>
-              Insert appropriate hover text here.
-            </div>
+        <a class="sports-link" href="http://athletics.kcc.edu/wbasketball">
+          <div class="thumb-caption">
+            Women's Basketball
           </div>
-          <img class="img-fluid" src="assets/img/03-thumbnail.jpg" alt="">
+          <div class="sports-hover">
+          </div>
+          <img class="img-fluid" src="{{page.baseurl}}assets/img/wbasketball-thumb.jpg" alt="Photo of Dejah Weathersby of the KCC Cavaliers Women's Basketball team, link to women's basketball page">
         </a>
         <div class="sports-caption">
-          <h4>Finish</h4>
-          <p class="text-muted">Identity</p>
+          <p>
+            <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
+            <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
+            <span class="jump-link-span"><a href="" class="jump-links">News</a></span>
+          </p>
+          <div class="sports-blurb editable">
+            <p class="editable">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" data-toggle="modal" href="#sportsModal4">
-          <div class="sports-hover">
-            <div class="sports-hover-content">
-              <i class="fa fa-plus fa-3x"></i><br>
-              Insert appropriate hover text here.
-            </div>
+        <a class="sports-link" href="http://athletics.kcc.edu/soccer">
+          <div class="thumb-caption">
+            Soccer
           </div>
-          <img class="img-fluid" src="assets/img/04-thumbnail.jpg" alt="">
+          <div class="sports-hover">
+          </div>
+          <img class="img-fluid" src="{{page.baseurl}}assets/img/soccer-thumb.jpg" alt="Photo from a KCC Cavaliers Soccer game vs ONU, link to soccer page">
         </a>
         <div class="sports-caption">
-          <h4>Lines</h4>
-          <p class="text-muted">Branding</p>
+          <p>
+            <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
+            <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
+            <span class="jump-link-span"><a href="" class="jump-links">News</a></span>
+          </p>
+          <div class="sports-blurb editable">
+            <p class="editable">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" data-toggle="modal" href="#sportsModal5">
-          <div class="sports-hover">
-            <div class="sports-hover-content">
-              <i class="fa fa-plus fa-3x"></i><br>
-              Insert appropriate hover text here.
-            </div>
+        <a class="sports-link" href="http://athletics.kcc.edu/softball">
+          <div class="thumb-caption">
+            Softball
           </div>
-          <img class="img-fluid" src="assets/img/05-thumbnail.jpg" alt="">
+          <div class="sports-hover">
+          </div>
+          <img class="img-fluid" src="{{page.baseurl}}assets/img/softball-thumb.jpg" alt="Photo of KCC Cavaliers Softball's Erin Gaston pitching, link to softball page">
         </a>
         <div class="sports-caption">
-          <h4>Southwest</h4>
-          <p class="text-muted">Website Design</p>
+          <p>
+            <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
+            <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
+            <span class="jump-link-span"><a href="" class="jump-links">News</a></span>
+          </p>
+          <div class="sports-blurb editable">
+            <p class="editable">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" data-toggle="modal" href="#sportsModal6">
-          <div class="sports-hover">
-            <div class="sports-hover-content">
-              <i class="fa fa-plus fa-3x"></i><br>
-              Insert appropriate hover text here.
-            </div>
+        <a class="sports-link" href="http://athletics.kcc.edu/volleyball">
+          <div class="thumb-caption">
+            Volleyball
           </div>
-          <img class="img-fluid" src="assets/img/06-thumbnail.jpg" alt="">
+          <div class="sports-hover">
+          </div>
+          <img class="img-fluid" src="{{page.baseurl}}assets/img/volleyball-thumb.jpg" alt="Team photo of the 2017 KCC Cavaliers volleyball team, link to volleyball page">
         </a>
         <div class="sports-caption">
-          <h4>Window</h4>
-          <p class="text-muted">Photography</p>
+          <p>
+            <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
+            <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
+            <span class="jump-link-span"><a href="" class="jump-links">News</a></span>
+          </p>
+          <div class="sports-blurb editable">
+            <p class="editable">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div>
       </div>
     </div>
