--- a/sports.html
+++ b/sports.html
@@ -7,7 +7,7 @@ baseurl: ../
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" href="http://athletics.kcc.edu/baseball">
+        <a class="sports-link" href="{{site.baseurl}}/baseball">
           <div class="thumb-caption">
             Baseball
           </div>
