Add image of Coach Todd Post into baseball's coach section
Re-crop image to remove white sliver on left side

--- a/baseball.html
+++ b/baseball.html
@@ -45,7 +45,7 @@ baseurl: ../
     </div>
     <div class="row">
       <div class="col-md-4">
-
+        <img src="{{page.baseurl}}assets/img/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid pull-left">
       </div>
       <div class="col-md-4">
 
