--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-baseurl: 
+baseurl:
 ---
 
 <!--[if lt IE 8]>
@@ -114,31 +114,34 @@ baseurl:
 
 <section class="container content-marg">
     <div class="row">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-header text-center text-white"><h2>Upcoming Games</h2></div>
-          <div class="card-body scroll-table">
-            <table id="results" class="table table-responsive text-centered"></table>
-          </div>
-        </div>
+      <div class="col-md-12">
+        <h2><i class="fas fa-calendar-alt"></i> Upcoming Games</h2>
+        <div id="track" class="slick games" ></div>
       </div>
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="card">
-              <div class="card-header text-center text-white"><h2>News</h2></div>
-              <div class="card-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="wrapper">
+          <h2><i class="fas fa-video"></i> Videos</h2>
+        	<div id="yt_list" class="yt_list">
+        	</div>
+        		<a href="http://youtube.com">More Athletics Videos</a>
+        	</div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="card">
-              <div class="card-header text-center text-white">Social Media</div>
-              <div class="card-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <div class="modal-body">
+                		<iframe id="yt_player"></iframe>
+              </div>
+              <div class="modal-footer">
               </div>
             </div>
           </div>
