Add margin to bottom of 'Upcoming Games'

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ baseurl:
 </section>  -->
 
 <section class="container content-marg">
-    <div class="row">
+    <div class="row schedule-row">
       <div class="col-md-12">
         <h2><i class="fas fa-calendar-alt"></i> Upcoming Games</h2>
         <div id="track" class="slick games" ></div>
