Add .f-color to fontAwesome icon's classes to set color
fontAwesome .f-color can be changed from $fa-color variable in _vars.scss

--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@ baseurl:
 <section class="container content-marg">
     <div class="row schedule-row">
       <div class="col-md-12">
-        <h2><i class="fas fa-calendar-alt"></i> Upcoming Games</h2>
+        <h2><i class="fas fa-calendar-alt f-color"></i> Upcoming Games</h2>
         <div id="track" class="slick games" ></div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <div id="wrapper">
-          <h2><i class="fas fa-video"></i> Videos</h2>
+          <h2><i class="fas fa-video f-color"></i> Videos</h2>
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a href="http://youtube.com">More Athletics Videos</a>
