Change .f-red to .f-color for easy changing of global fA icon color

--- a/baseball.html
+++ b/baseball.html
@@ -41,7 +41,7 @@ baseurl: ../
 <section class="coach-section">
   <div class="container">
     <div class="row text-left">
-      <h4 class="coaches-heading"><i class="f-red fas fa-baseball-ball"></i>&#160;&#160;Coaches</h4>
+      <h4 class="coaches-heading"><i class="f-color fas fa-baseball-ball"></i>&#160;&#160;Coaches</h4>
     </div>
     <div class="row">
       <div class="col-md-4">
