Create second modal for Assistant coach

--- a/baseball.html
+++ b/baseball.html
@@ -46,10 +46,10 @@ baseurl: ../
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}assets/img/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}assets/img/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
-            <h5 class="coach-name">Todd Post</h5>
-            <h6 class="coach-title">Head Coach</h6>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Todd Post</h5>
+            <h6 class="coach-title">Head Coach</h6></a>
             <p>815&#8209;802&#8209;8616<br>
             tpost@kcc.edu</p>
           </div>
@@ -57,10 +57,10 @@ baseurl: ../
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><img src="{{page.baseurl}}assets/img/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img"></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}assets/img/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link"></a></div>
           <div class="col-6 float-right">
-            <h5 class="coach-name">Bryce Shafer</h5>
-            <h6 class="coach-title">Assistant Coach</h6>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Bryce Shafer</h5>
+            <h6 class="coach-title">Assistant Coach</h6></a>
             <p>815&#8209;802&#8209;8609<br>
             bshafer@kcc.edu</p>
           </div>
@@ -69,7 +69,7 @@ baseurl: ../
       <div class="col-md-4"></div>
     </div>
   </div>
-  <!-- Modal -->
+  <!-- Coach Modals -->
 <div class="modal fade" id="modalCoach1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -79,26 +79,45 @@ baseurl: ../
         </button>
       </div>
       <div class="modal-body">
-        <div class="row">
-          <div class="col-4">
-            <img src="{{page.baseurl}}assets/img/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid  coach-modal-img">
-          </div>
-          <div class="col-8">
-            <h5 class="coach-name">Todd Post</h5>
-            <h6 class="coach-title">Head Coach</h6>
-            <p>815&#8209;802&#8209;8616<br>
-            tpost@kcc.edu</p>
-            <p>Head Coach Todd Post brings enthusiasm and a passion for the game to the field every day.</p>
-            <p>Post has completed 17 seasons as the Cavaliers head coach, with a record of 710-322-6. Prior to becoming head coach in 2001, he was the assistant coach for seven years.</p>
-            <p>During Coach Post's tenure, the Cavaliers have averaged more than 41 wins per season, and 143 players have gone on to play at the next level. Since 2001, 62 Cavs have been named All-Region, 22 have been named All-Americans, and nine have signed professional contracts.</p>
-            <p>In 2017 Post coached the Cavaliers to the NJCAA Division II National Championship, defeating Mercer County C.C. (N.J.), 11-5 in Enid, Okla. The Cavaliers finished with a record of 54-11-1. In 2009 they finished 3rd at the World Series with a record of 52-14-1. In all, the Cavs have won seven Region IV Championships and have made five World Series appearances.</p>
-            <p>Post is a 1987 graduate of Danville Area Community College, where he played basketball for two years. He then attended KCC and began his college baseball career as a pitcher for the Cavaliers in 1988.</p>
-            <p>Coach Post transferred to Benedictine University in Lisle where he was a two-year First Team NICC All-Conference pitcher. In 1989, he was named to the All-Midwest Region first team, and Athlete of the Year at Benedictine in 1990. He graduated from Benedictine in 1990 with a bachelor's degree in physical education.</p>
-            <p>Post has maintained a connection to professional baseball by working as an associate scout for the last 16 years. Since 2002, he has worked with the San Diego Padres.</p>
-            <p>In addition to head coaching duties, Post works with players on hitting and defensive aspects of the game.</p>
-            <p>Post also is KCC's athletic director. He resides in rural Kankakee with his wife, Julianne, and their son, Dylan. Their daughter, Jordan, is a registered nurse at Riverside Medical Center in Kankakee.</p>
-        </div>
-        </div>
+        <img src="{{page.baseurl}}assets/img/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img">
+        <h5 class="coach-name">Todd Post</h5>
+        <h6 class="coach-title">Head Coach</h6>
+        <p>815&#8209;802&#8209;8616<br>
+        tpost@kcc.edu</p><br>
+        <p>Head Coach Todd Post brings enthusiasm and a passion for the game to the field every day.</p>
+        <p>Post has completed 17 seasons as the Cavaliers head coach, with a record of 710-322-6. Prior to becoming head coach in 2001, he was the assistant coach for seven years.</p>
+        <p>During Coach Post's tenure, the Cavaliers have averaged more than 41 wins per season, and 143 players have gone on to play at the next level. Since 2001, 62 Cavs have been named All-Region, 22 have been named All-Americans, and nine have signed professional contracts.</p>
+        <p>In 2017 Post coached the Cavaliers to the NJCAA Division II National Championship, defeating Mercer County C.C. (N.J.), 11-5 in Enid, Okla. The Cavaliers finished with a record of 54-11-1. In 2009 they finished 3rd at the World Series with a record of 52-14-1. In all, the Cavs have won seven Region IV Championships and have made five World Series appearances.</p>
+        <p>Post is a 1987 graduate of Danville Area Community College, where he played basketball for two years. He then attended KCC and began his college baseball career as a pitcher for the Cavaliers in 1988.</p>
+        <p>Coach Post transferred to Benedictine University in Lisle where he was a two-year First Team NICC All-Conference pitcher. In 1989, he was named to the All-Midwest Region first team, and Athlete of the Year at Benedictine in 1990. He graduated from Benedictine in 1990 with a bachelor's degree in physical education.</p>
+        <p>Post has maintained a connection to professional baseball by working as an associate scout for the last 16 years. Since 2002, he has worked with the San Diego Padres.</p>
+        <p>In addition to head coaching duties, Post works with players on hitting and defensive aspects of the game.</p>
+        <p>Post also is KCC's athletic director. He resides in rural Kankakee with his wife, Julianne, and their son, Dylan. Their daughter, Jordan, is a registered nurse at Riverside Medical Center in Kankakee.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="modalCoach2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="{{page.baseurl}}assets/img/bryce-shafer.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid float-left coach-modal-img">
+        <h5 class="coach-name">Bryce Shafer</h5>
+        <h6 class="coach-title">Assistant Coach</h6>
+        <p>815&#8209;802&#8209;8609<br>
+        bshafer@kcc.edu</p><br>
+        <p>Coach Shafer is entering his third season as an assistant at KCC. Shafer attended Valparaiso University from 2007-10 prior to being selected by the Chicago Cubs in the 2010 Major League Baseball Amateur Draft. In 2010 at Valparaiso, Shafer tallied 121 strikeouts, second-most in Crusader history and third m​ost in Horizon League history, earning him Horizon League Pitcher of the Year and First Team All-Conference honors.</p>
+        <p>Shafer pitched in the Cubs organization from 2010 to 2012, posting a career 2.99 ERA and striking out 110 batters in 111.1 innings. In 2013 Shafer pitched for the Frontier Greys and in 2014 for the River City Rascals, both in the Frontier League of Independent Baseball.</p>
+        <p>For the Cavaliers, he works with pitchers and catchers and assists with recruiting. Shafer also works as an academic success coach for the Athletic Department. Coach Shafer has a bachelor's degree in psychology from Ft. Hayes State University (2015).</p>
+        <p>In addition to his coaching at KCC, Shafer has served as head coach of the varsity boys basketball team at Peotone High School. Coach Shafer resides in Manteno with his wife, Jill, and their son, Carver.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
