Change img hover effects classes to reflect class changes in scss

--- a/sports.html
+++ b/sports.html
@@ -6,14 +6,14 @@ baseurl: ../
 <section class="sports-section" id="sports">
   <div class="container">
     <div class="row">
-      <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" href="{{site.baseurl}}/baseball">
+      <div class="col-md-4 col-sm-6 img-wrapper">
+        <a class="img-link" href="{{site.baseurl}}/baseball">
           <div class="thumb-caption">
             Baseball
           </div>
-          <div class="sports-hover">
+          <div class="img-hover">
           </div>
-          <img class="img-fluid" src="{{page.baseurl}}assets/img/baseball-thumb.jpg" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/baseball-thumb.jpg" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page">
         </a>
         <div class="sports-caption">
           <p>
@@ -26,14 +26,14 @@ baseurl: ../
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" href="http://athletics.kcc.edu/mbasketball">
+      <div class="col-md-4 col-sm-6 img-wrapper">
+        <a class="img-link" href="http://athletics.kcc.edu/mbasketball">
           <div class="thumb-caption">
             Men's Basketball
           </div>
-          <div class="sports-hover">
+          <div class="img-hover">
           </div>
-          <img class="img-fluid" src="{{page.baseurl}}assets/img/basketball-thumb.jpg" alt="Photo of Dante Emerson #23 of the KCC Cavaliers Men's Basketball team, link to men's basketball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/basketball-thumb.jpg" alt="Photo of Dante Emerson #23 of the KCC Cavaliers Men's Basketball team, link to men's basketball page">
         </a>
         <div class="sports-caption">
           <p>
@@ -46,14 +46,14 @@ baseurl: ../
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" href="http://athletics.kcc.edu/wbasketball">
+      <div class="col-md-4 col-sm-6 img-wrapper">
+        <a class="img-link" href="http://athletics.kcc.edu/wbasketball">
           <div class="thumb-caption">
             Women's Basketball
           </div>
-          <div class="sports-hover">
+          <div class="img-hover">
           </div>
-          <img class="img-fluid" src="{{page.baseurl}}assets/img/wbasketball-thumb.jpg" alt="Photo of Dejah Weathersby of the KCC Cavaliers Women's Basketball team, link to women's basketball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/wbasketball-thumb.jpg" alt="Photo of Dejah Weathersby of the KCC Cavaliers Women's Basketball team, link to women's basketball page">
         </a>
         <div class="sports-caption">
           <p>
@@ -66,14 +66,14 @@ baseurl: ../
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" href="http://athletics.kcc.edu/soccer">
+      <div class="col-md-4 col-sm-6 img-wrapper">
+        <a class="img-link" href="http://athletics.kcc.edu/soccer">
           <div class="thumb-caption">
             Soccer
           </div>
-          <div class="sports-hover">
+          <div class="img-hover">
           </div>
-          <img class="img-fluid" src="{{page.baseurl}}assets/img/soccer-thumb.jpg" alt="Photo from a KCC Cavaliers Soccer game vs ONU, link to soccer page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/soccer-thumb.jpg" alt="Photo from a KCC Cavaliers Soccer game vs ONU, link to soccer page">
         </a>
         <div class="sports-caption">
           <p>
@@ -86,14 +86,14 @@ baseurl: ../
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" href="http://athletics.kcc.edu/softball">
+      <div class="col-md-4 col-sm-6 img-wrapper">
+        <a class="img-link" href="http://athletics.kcc.edu/softball">
           <div class="thumb-caption">
             Softball
           </div>
-          <div class="sports-hover">
+          <div class="img-hover">
           </div>
-          <img class="img-fluid" src="{{page.baseurl}}assets/img/softball-thumb.jpg" alt="Photo of KCC Cavaliers Softball's Erin Gaston pitching, link to softball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/softball-thumb.jpg" alt="Photo of KCC Cavaliers Softball's Erin Gaston pitching, link to softball page">
         </a>
         <div class="sports-caption">
           <p>
@@ -106,14 +106,14 @@ baseurl: ../
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6 sports-item">
-        <a class="sports-link" href="http://athletics.kcc.edu/volleyball">
+      <div class="col-md-4 col-sm-6 img-wrapper">
+        <a class="img-link" href="http://athletics.kcc.edu/volleyball">
           <div class="thumb-caption">
             Volleyball
           </div>
-          <div class="sports-hover">
+          <div class="img-hover">
           </div>
-          <img class="img-fluid" src="{{page.baseurl}}assets/img/volleyball-thumb.jpg" alt="Team photo of the 2017 KCC Cavaliers volleyball team, link to volleyball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/volleyball-thumb.jpg" alt="Team photo of the 2017 KCC Cavaliers volleyball team, link to volleyball page">
         </a>
         <div class="sports-caption">
           <p>
