Add remaining content to Facilities landing page

--- a/facilities.html
+++ b/facilities.html
@@ -2,3 +2,44 @@
 layout: facilities
 baseurl: ../
 ---
+<main class="facilities-container">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 img-wrapper">
+        <a class="img-link" href="{{site.baseurl}}/sports-facilities">
+          <div class="thumb-caption">
+            Sports Facilities
+          </div>
+          <div class="img-hover">
+          </div>
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/sport-facilities-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field">
+        </a>
+      </div>
+      <div class="col-md-8 vert-mid">
+        <p class="editable">Simple introduction paragraph about the sports facilities, that will lead into the individual links below. Simple introduction paragraph about the sports facilities, that will lead into the individual links below.</p>
+        <a href="{{site.baseurl}}/sports-facilities#gym" class="blue-link">George S. Ryan Gymnasium</a><br>
+        <a href="{{site.baseurl}}/sports-facilities#baseball-field" class="blue-link">Baseball Field</a><br>
+        <a href="{{site.baseurl}}/sports-facilities#softball-field" class="blue-link">Softball Field</a><br>
+        <a href="{{site.baseurl}}/sports-facilities#soccer-field" class="blue-link">Softball Field</a><br>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 img-wrapper">
+        <a class="img-link" href="{{site.baseurl}}/fitness-center">
+          <div class="thumb-caption">
+            Fitness Center
+          </div>
+          <div class="img-hover">
+          </div>
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/fitness-center-thumb.jpg" alt="Photo of Erin Gaston pitching at a game on the KCC Softball Field">
+        </a>
+      </div>
+      <div class="col-md-8 vert-mid">
+        <p class="editable">Simple introduction paragraph about the fitness center, that will lead into the individual links below. Simple introduction paragraph about the fitness center, that will lead into the individual links below.</p>
+        <a href="{{site.baseurl}}/fitness-center#personal-trainers" class="blue-link">Personal Trainers</a><br>
+        <a href="{{site.baseurl}}/fitness-center#membership" class="blue-link">Membership</a><br>
+        <a href="{{site.baseurl}}/fitness-center#testimonials" class="blue-link">Testimonials</a><br>
+      </div>
+    </div>
+  </div>
+</main>
