Change layouts in yaml head to reflect new names. Add liquid...
includes to bring in hero banners and hero carousels into pages
that were removed from the layout files.

--- a/baseball.html
+++ b/baseball.html
@@ -1,7 +1,8 @@
 ---
-layout: sport-landing
+layout: sub-nav-landing
 baseurl: ../
 ---
+{% include baseball-slider.html %}
 <!--  Content  -->
 <section class="container content-marg">
     <div class="row">
