--- a/facilities.html
+++ b/facilities.html
@@ -1,7 +1,8 @@
 ---
-layout: facilities
+layout: sub-nav-landing
 baseurl: ../
 ---
+{% include facil-banner.html %}
 <main class="facilities-container">
   <div class="container">
     <div class="row">
