--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: landing
 baseurl:
 ---
 
@@ -111,6 +111,8 @@ baseurl:
     </div>
   </div>
 </section>  -->
+
+{% include hero-slider.html %}
 
 <section class="container content-marg">
     <div class="row schedule-row">
