Update schedule and YouTube carousel's JS & scss
Connect to FTP

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ baseurl:
           <h2><i class="fas fa-video f-color"></i> Videos</h2>
         	<div id="yt_list" class="yt_list">
         	</div>
-        		<a href="http://youtube.com">More Athletics Videos</a>
+        		<a class="btn btn-primary yt-button" href="http://youtube.com">More Athletics Videos</a>
         	</div>
 
         <!-- Modal -->
