Updated 'sports.html' via CloudCannon

--- a/sports.html
+++ b/sports.html
@@ -13,7 +13,7 @@ baseurl: ../
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/baseball-thumb.jpg" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/baseball-thumb.jpg" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page" />
         </a>
         <div class="sports-caption">
           <p>
@@ -22,7 +22,7 @@ baseurl: ../
             <span class="jump-link-span"><a href="" class="jump-links">News</a></span>
           </p>
           <div class="sports-blurb editable">
-            <p class="editable">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@ baseurl: ../
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/basketball-thumb.jpg" alt="Photo of Dante Emerson #23 of the KCC Cavaliers Men's Basketball team, link to men's basketball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/basketball-thumb.jpg" alt="Photo of Dante Emerson #23 of the KCC Cavaliers Men's Basketball team, link to men's basketball page" />
         </a>
         <div class="sports-caption">
           <p>
@@ -53,7 +53,7 @@ baseurl: ../
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/wbasketball-thumb.jpg" alt="Photo of Dejah Weathersby of the KCC Cavaliers Women's Basketball team, link to women's basketball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/wbasketball-thumb.jpg" alt="Photo of Dejah Weathersby of the KCC Cavaliers Women's Basketball team, link to women's basketball page" />
         </a>
         <div class="sports-caption">
           <p>
@@ -73,7 +73,7 @@ baseurl: ../
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/soccer-thumb.jpg" alt="Photo from a KCC Cavaliers Soccer game vs ONU, link to soccer page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/soccer-thumb.jpg" alt="Photo from a KCC Cavaliers Soccer game vs ONU, link to soccer page" />
         </a>
         <div class="sports-caption">
           <p>
@@ -93,7 +93,7 @@ baseurl: ../
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/softball-thumb.jpg" alt="Photo of KCC Cavaliers Softball's Erin Gaston pitching, link to softball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/softball-thumb.jpg" alt="Photo of KCC Cavaliers Softball's Erin Gaston pitching, link to softball page" />
         </a>
         <div class="sports-caption">
           <p>
@@ -113,7 +113,7 @@ baseurl: ../
           </div>
           <div class="img-hover">
           </div>
-          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/volleyball-thumb.jpg" alt="Team photo of the 2017 KCC Cavaliers volleyball team, link to volleyball page">
+          <img class="img-fluid img-ease" src="{{page.baseurl}}assets/img/volleyball-thumb.jpg" alt="Team photo of the 2017 KCC Cavaliers volleyball team, link to volleyball page" />
         </a>
         <div class="sports-caption">
           <p>
