Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -1,6 +1,16 @@
 ---
 layout: sub-nav-landing
 baseurl: ../
+slides:
+  - image: /assets/img/cover-guyKCC_851.jpg
+    text: Apply here
+    url: 'http://www.kcc.edu'
+  - image: /assets/img/cover-guyKCC_851.jpg
+    text: Advise/Assess
+    url: 'http://www.kcc.edu/students/advising/Pages/default.aspx'
+  - image: /assets/img/cover-guyKCC_851.jpg
+    text: Register
+    url: 'http://www.kcc.edu/register'
 ---
 {% include baseball-slider.html %}
 <!--  Content  -->
