Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -3,14 +3,14 @@ layout: sub-nav-landing
 baseurl: ../
 slides:
   - image: /assets/img/cover-guyKCC_851.jpg
-    text: Apply here
     url: 'http://www.kcc.edu'
+    text: Apply here
   - image: /assets/img/cover-guyKCC_851.jpg
-    text: Advise/Assess
-    url: 'http://www.kcc.edu/students/advising/Pages/default.aspx'
+    url: 'http://www.kcc.edu'
+    text: Apply here
   - image: /assets/img/cover-guyKCC_851.jpg
-    text: Register
-    url: 'http://www.kcc.edu/register'
+    url: 'http://www.kcc.edu'
+    text: Apply here
 ---
 {% include baseball-slider.html %}
 <!--  Content  -->
