--- a/baseball.html
+++ b/baseball.html
@@ -2,13 +2,13 @@
 layout: sub-nav-landing
 baseurl: ../
 slides:
-  - image: assets/img/cover-guyKCC_851.jpg
+  - image: assets/img/header-bg2.jpg
     url: 'http://www.kcc.edu'
     text: Apply here
-  - image: assets/img/cover-guyKCC_851.jpg
+  - image: assets/img/header-bg2.jpg
     url: 'http://www.kcc.edu'
     text: Apply here
-  - image: assets/img/cover-guyKCC_851.jpg
+  - image: assets/img/header-bg2.jpg
     url: 'http://www.kcc.edu'
     text: Apply here
 ---
