Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -4,7 +4,9 @@ baseurl: ../
 slides:
   - image: assets/img/header-bg2.jpg
     url: 'http://www.kcc.edu'
-    text: Apply here
+    text: |-
+      2017 NJCAA DIVISION II
+      NATIONAL CHAMPIONS
   - image: assets/img/header-bg2.jpg
     url: 'http://www.kcc.edu'
     text: Apply here
@@ -12,6 +14,7 @@ slides:
     url: 'http://www.kcc.edu'
     text: Apply here
 ---
+
 {% include baseball-slider.html %}
 <!--  Content  -->
 <section class="container content-marg">
